# ISA_Snmp2otel

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
Data/Inputs/: oids_file.txt
Data/Outputs/: Correct_OTEL.json  OTET.json
libs/BasicSnmp/lib/: stdcharvector.h
src/: ArgumentParser.cpp  ArgumentParser.h  InputParser.cpp  InputParser.h  Snmp2otel_BL.cpp  Snmp2otel_BL.h  SnmpOtelBer.cpp  SnmpOtelBer.h  SnmpOtelClient.cpp  SnmpOtelClient.h  SnmpOtelExport.cpp  SnmpOtelExport.h  SnmpOtelJson.cpp  SnmpOtelJson.h  SnmpOtelMetrics.cpp  SnmpOtelMetrics.h  SnmpOtel_BL.cpp  SnmpOtel_BL.h  snmpBer.cpp  snmpBer.h
src/Handlers/: SignalHandler.cpp  SignalHandler.h
src/Structs/: OpenTelemetryMetrics.h  SnmpOtelConfig.h  SnmpOtelErrors.h  SnmpOtelExportConfig.h  SnmpOtelOidConfig.h
tests/: snmpAgent.cpp
tests/Inputs/: oids_file.txt
tests/IntegrationTests/: otelJsonIntegrationTests.sh
tests/OTEL/: collector-config.yaml  docker-compose.yml  otel-collector-config.yaml
tests/UnitTests/: otelJsonUnitTests.cpp
tests/UnitTests/References/: otelJsonUnitTests_1.json
